# EcomExtract

./: .gitignore  AgentFIle.md  README.md  plan.md  pyproject.toml
.github/agents/: senior-dev.agent.md
scripts/: debug_mobvoi.py  inspect_mobvoi.py  run_scraper.py
src/ecomextract/: __init__.py  __main__.py  browser.py  cli.py  extractors.py  models.py  parsing.py  runner.py  scraper.py  storage.py
tests/: test_cli.py  test_extractors.py  test_models.py  test_parsing.py  test_scraper.py  test_storage.py
